data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3396.wast
;; 5. **Test Description**: Create a looped sequence of function calls where one function attempts to use `br_if` to exit the loop based on comparisons involving its parameters. Ensure these parameters are correctly passed and compared.    - **Constraint**: Ensuring that parameters passed through the call stack are correctly utilized in loop condition checks.    - **Infinite Loop Relation**: Misinterpreted parameters could prevent the loop condition from being true, thus making the loop infinite.

(assert_invalid
(module
  (type $sig (func (param i32)))
  (func $loop-test (param i32)
    (local.get 0)
    (i32.const 10)
    (i32.eq)
    (br_if 0)
    (call $loop-test (i32.add (local.get 0) (i32.const 1)))
  )
  (func (call $loop-test (i32.const 0)))
)
"type mismatch"
)